force-app/main/default/objects/Ressource__c/Ressource__c.object-meta.xml
<CustomObject>
    <label>Ressource</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ressource</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>