force-app/main/default/objects/Ressource__c/fields/Hiring_date__c.field-meta.xml
<CustomField>
    <fullName>Hiring_date__c</fullName>
    <label>Hiring date</label>
    <type>Date</type>
</CustomField>