force-app/main/default/objects/Ressource__c/fields/Is_assign_Ressource__c.field-meta.xml
<CustomField>
    <fullName>Is_assign_Ressource__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is assign Ressource</label>
    <type>Checkbox</type>
</CustomField>