force-app/main/default/objects/Ressource__c/fields/Prenom__c.field-meta.xml
<CustomField>
    <fullName>Prenom__c</fullName>
    <label>First Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>